--- a/force-app/main/default/classes/AccountMessagesController.cls
+++ b/force-app/main/default/classes/AccountMessagesController.cls
@@ -41,5 +41,16 @@ public with sharing class AccountMessagesController {
 
         insert accountsMessages;
 
-    } 
+    }
+
+    public with sharing class AccountSelected {
+        
+        public Boolean selected {get; set;}
+        public Account account {get; set;}
+    
+        public AccountSelected(Boolean selected, Account account) {
+            this.selected = selected;
+            this.account = account;
+        }
+    }
 }
