--- a/force-app/main/default/classes/PokeApiServiceTest.cls
+++ b/force-app/main/default/classes/PokeApiServiceTest.cls
@@ -2,7 +2,11 @@
 private class PokeApiServiceTest {
     @isTest static void shouldReturnACorrectPokemonFromTheApi(){
         Test.setMock(HttpCalloutMock.class, new PokeApiServiceMock());
+
+        Test.startTest();
         Integer idObtained = PokeApiService.getFromPokeApi('ditto').id;
+        Test.stopTest();
+        
         System.assertEquals(132, idObtained, 'Something was unexpected');
     }
 }
