Correciones array y test faltantes

--- a/force-app/main/default/classes/AccountManage.cls
+++ b/force-app/main/default/classes/AccountManage.cls
@@ -6,20 +6,25 @@ public with sharing class AccountManage {
         return acc.Id;
     }
 
-    public static Boolean updateAccount(String accName, Integer accEmployees, String accDocType, String accDocNum) {
-        Account acc = new Account(Name = accName, NumberOfEmployees = accEmployees, Identification_type__c = accDocType, Document_number__c = accDocNum);
-        Database.SaveResult res = Database.update(acc);
-        return res.isSuccess();
+    public static Boolean updateAccount(String accName, Integer accEmployees, String accDocType, String accDocNumber) {
+        Account acc = consultAccount(accDocType, accDocNumber);
+        if(acc != null) {
+            acc.Name = accName;
+            acc.NumberOfEmployees = accEmployees;
+            Database.SaveResult res = Database.update(acc);
+            return res.isSuccess();
+        }
+        return false;
     }
 
     public static Boolean deleteAccount(String accDocType, String accDocNumber) {
-        Account[] acc = [SELECT Id FROM Account WHERE Identification_type__c = :accDocType AND Document_number__c = :accDocNumber LIMIT 1];
+        List<Account> acc = [SELECT Id FROM Account WHERE Identification_type__c = :accDocType AND Document_number__c = :accDocNumber LIMIT 1];
         Database.DeleteResult res = Database.delete(acc.get(0).Id);
         return res.isSuccess();
     }
 
     public static Account consultAccount(String accDocType, String accDocNumber) {
-        Account[] acc = [SELECT Id FROM Account WHERE Identification_type__c = :accDocType AND Document_number__c = :accDocNumber LIMIT 1];
+        List<Account> acc = [SELECT Id, Name FROM Account WHERE Identification_type__c = :accDocType AND Document_number__c = :accDocNumber LIMIT 1];
         if(!acc.isEmpty()) {
             return acc.get(0);
         } else {
