Account Trigger, pokeapi y AccountValidation corregidos

--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -1,18 +1,5 @@
 public with sharing class AccountTriggerHandler {
-    public static List<Account> AccountTriggerInsertAccount(List<Account> accounts){
-        for(Account anAccount : accounts){
-            if(AccountValidation.validateAccount(anAccount) == false){
-                anAccount.addError('Account Already Exists');
-            }
-        }
-        return accounts;
-    }
-    public static List<Account> AccountTriggerUpdateAccount(List<Account> accounts){
-        for(Account anAccount : accounts){
-            if(AccountValidation.validateAccount(anAccount) == false){
-                anAccount.addError('Account Already Has those values');
-            }
-        }
-        return accounts;
+    public static List<Account> AccountTriggerValidateAccount(List<Account> accounts){
+        return AccountValidation.validateAccount(accounts);
     }
 }
