--- a/force-app/main/default/classes/AccountValidation.cls
+++ b/force-app/main/default/classes/AccountValidation.cls
@@ -1,20 +1,30 @@
 public with sharing class AccountValidation {
-    public static Boolean validateAccount(Account anAccount){
-        String identificationType = anAccount.Identification_type__c;
-        String documentNumber = anAccount.Document_number__c;
-        if(identificationType !=null && documentNumber !=null){
-            List<Account> checkAccount = [
-                SELECT Id, Identification_type__c, Document_number__c
-                FROM Account
-                WHERE Document_number__c = :documentNumber
-                    AND Identification_type__c = :identificationType
-                LIMIT 1
-            ];
-            //if account exists, returns false. Account not validated
-            if(checkAccount.size() == 1){
-                return false;
+    public static List<Account> validateAccount(List<Account> accounts){
+
+        Map<String,Account> accountsByDocumentNumber = new Map<String,Account>();
+        for (Account anAccount : accounts){
+            if(anAccount.Identification_type__c !=null && anAccount.Document_number__c !=null){
+                accountsByDocumentNumber.put(anAccount.Document_number__c, anAccount);
             }
         }
-        return true;
+
+        List<Account> checkAccount = [
+            SELECT Id, Identification_type__c, Document_number__c
+            FROM Account
+            WHERE Document_number__c IN :accountsByDocumentNumber.keySet()
+            LIMIT 200
+        ];
+
+        Map<String,String> idTypeByDocumentNumber = new Map<String,String>();
+        for(Account anAccount : checkAccount){
+            idTypeByDocumentNumber.put(anAccount.Document_number__c, anAccount.Identification_type__c);
+        }
+
+        for(Account anAccount : accounts){
+            if(idTypeByDocumentNumber.get(anAccount.Document_number__c) == anAccount.Identification_type__c){
+                anAccount.addError('Account Already Exists');
+            }
+        }
+        return accounts;   
     }
 }
